# pynets-aie

./: README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: .gitignore  README.md  pyproject.toml
homeworks/HW03/eda-cli/data/: example.csv
homeworks/HW03/eda-cli/src/eda_cli/: __init__.py  cli.py  core.py  viz.py
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW06/: HW06.ipynb  README.md  S06-hw-dataset-04.csv  report.md
homeworks/HW06/artifacts/: best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW07/: COMPLIANCE_STATUS.md  HW07.ipynb  INDEX.md  README.md  RESULTS_SUMMARY.md  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW07/artifacts/labels/: labels_dataset_01.csv  labels_dataset_02.csv  labels_dataset_03.csv
